fixed layout issues

--- a/src/components/showcase-page/showcase-page.scss
+++ b/src/components/showcase-page/showcase-page.scss
@@ -1,47 +1,3 @@
-// .item {
-//   border: solid black 1px;
-//   height: 15vh;
-//   width: 20vh;
-//   margin-top: 1vh;
-// }
-
-// .deal-button {
-//   width: 50%;
-//   background: linear-gradient(45deg, #fe6b8b 30%, #ff8e53 90%) !important;
-//   color: white !important;
-//   align-self: flex-end;
-//   height: 7vh;
-// }
-
-// .deal-image {
-//   height: 75%;
-//   width: 100%;
-// }
-
-// a {
-//   text-decoration: none;
-// }
-
-// .showcase-intro-container {
-//   max-height: 50vh;
-//   display: grid;
-//   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-//   grid-template-rows: 1fr 1fr 1fr;
-// }
-
-// .h1-header {
-//   background-color: #00464c;
-//   text-align: center;
-//   color: white;
-// }
-
-// .showcase-name-header {
-//   grid-column-start: 3;
-//   grid-column-end: 4;
-//   grid-row-start: 1;
-//   grid-row-end: 1;
-// }
-
 .showcase-entry-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -68,4 +24,38 @@
 
 .socials-item {
   margin: 0 1vw;
+  a {
+    text-decoration: none;
+  }
+}
+
+.creator-name {
+  font-size: 2.5em;
+  padding-bottom: 5px;
+}
+
+.deal-item {
+  border: solid black 1px;
+  height: 15vh;
+  width: 20vh;
+  margin-top: 1vh;
+}
+
+.deal-button {
+  width: 50%;
+  background: linear-gradient(45deg, #fe6b8b 30%, #ff8e53 90%) !important;
+  color: white !important;
+  align-self: flex-end;
+  height: 7vh;
+}
+
+.deal-image {
+  height: 75%;
+  width: 100%;
+}
+
+.deals-and-discounts-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
 }
